modify flip, add delete

--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -382,7 +382,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <exit id="6I2-2c-wgp" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2010.4000000000001" y="84.107946026986511"/>
+            <point key="canvasLocation" x="2033" y="571"/>
         </scene>
         <!--Back View Controller-->
         <scene sceneID="msO-h7-hwf">
@@ -391,17 +391,29 @@
                     <view key="view" contentMode="scaleToFill" id="lEc-B0-Yxc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTk-P7-HRy">
+                                <rect key="frame" x="319" y="627" width="46" height="30"/>
+                                <connections>
+                                    <segue destination="vXX-e3-oF2" kind="unwind" identifier="returnFromBack" unwindAction="returnFromBackViewWithSegue:" id="e9Y-Dr-xJ6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="XlT-Hv-UCY" firstAttribute="trailing" secondItem="wTk-P7-HRy" secondAttribute="trailing" constant="10" id="9cs-sc-LCj"/>
+                            <constraint firstItem="XlT-Hv-UCY" firstAttribute="bottom" secondItem="wTk-P7-HRy" secondAttribute="bottom" constant="10" id="JyH-CS-AAY"/>
+                            <constraint firstItem="wTk-P7-HRy" firstAttribute="leading" secondItem="XlT-Hv-UCY" secondAttribute="leading" constant="319" id="l51-Ej-yEG"/>
+                            <constraint firstItem="wTk-P7-HRy" firstAttribute="top" secondItem="XlT-Hv-UCY" secondAttribute="top" constant="627" id="zBL-Na-Rax"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="XlT-Hv-UCY"/>
                     </view>
                     <navigationItem key="navigationItem" id="m7L-ZP-AZV"/>
-                    <connections>
-                        <segue destination="TBm-Ii-SGX" kind="presentation" identifier="flipToFront" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="EvM-7u-eq7"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zcp-Tp-0lm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="vXX-e3-oF2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2834" y="84"/>
+            <point key="canvasLocation" x="2794" y="84"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pPw-Qo-omb">
